--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,7 @@
         <activity android:name=".ui.about.DonateActivity" />
         <activity android:name=".ui.book.info.BookInfoActivity" />
         <activity android:name="io.legado.app.ui.book.info.edit.BookInfoEditActivity" />
-        <activity android:name=".ui.book.source.debug.SourceDebugActivity" />
+        <activity android:name=".ui.book.source.debug.BookSourceDebugActivity" />
         <activity android:name=".ui.book.source.manage.BookSourceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
