--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,3 +151,5 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
 }
+
+apply plugin: 'com.google.gms.google-services'
