--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,7 +87,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     //fireBase
-    implementation 'com.google.firebase:firebase-core:17.2.0'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     //androidX
@@ -97,8 +97,8 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta05'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'com.google.android:flexbox:1.1.0'
 
     //lifecycle
@@ -107,7 +107,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //room
-    def room_version = '2.2.0'
+    def room_version = '2.2.1'
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
