--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,9 +38,7 @@
                 android:resource="@xml/shortcuts"
                 android:launchMode="singleTask" />
         </activity>
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:launchMode="singleTop" />
+        <activity android:name=".ui.main.MainActivity" />
         <activity
             android:name=".ui.book.read.ReadBookActivity"
             android:configChanges="locale|keyboardHidden|orientation|screenSize|smallestScreenSize|screenLayout"
