--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,14 +91,14 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     //androidX
-    implementation 'androidx.core:core-ktx:1.2.0-beta02'
+    implementation 'androidx.core:core-ktx:1.2.0-rc01'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.media:media:1.1.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-rc01'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.google.android:flexbox:1.1.0'
 
     //lifecycle
@@ -107,7 +107,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
     //room
-    def room_version = '2.2.1'
+    def room_version = '2.2.2'
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
@@ -153,8 +153,12 @@ dependencies {
     //颜色选择
     implementation 'com.jaredrummler:colorpicker:1.1.0'
 
+    //apache
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.apache.commons:commons-text:1.8'
+
+    //MarkDown
+    implementation 'ru.noties.markwon:core:3.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
