--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: "de.timfreiheit.resourceplaceholders"
-//apply plugin: 'io.fabric'
+apply plugin: 'io.fabric'
 
 androidExtensions {
     experimental = true
@@ -30,9 +30,8 @@ android {
         }
     }
     defaultConfig {
-        applicationId "io.legado.apps"
-        //minSdkVersion 21
-        minSdkVersion 28
+        applicationId "io.legado.app"
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode gitCommits
         versionName version
@@ -88,8 +87,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     //fireBase
-    //implementation 'com.google.firebase:firebase-core:17.2.1'
-    //implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     //androidX
     implementation 'androidx.core:core-ktx:1.2.0-rc01'
@@ -162,4 +161,4 @@ dependencies {
     implementation 'ru.noties.markwon:core:3.0.2'
 }
 
-//apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.gms.google-services'
