--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'de.timfreiheit.resourceplaceholders:placeholders:0.3'
-        //classpath 'com.google.gms:google-services:4.3.3'
-        //classpath 'io.fabric.tools:gradle:1.31.0'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath 'io.fabric.tools:gradle:1.31.0'
     }
 }
 
