--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -4,7 +4,7 @@
     "bgType": 1,
     "darkStatusIcon": true,
     "textColor": "#5E432E",
-    "textSize": 22,
+    "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
     "lineSpacingMultiplier": 1.2,
@@ -14,11 +14,11 @@
     "paddingBottom": 0
   },
   {
-    "bgStr": "新羊皮纸.jpg",
-    "bgType": 1,
+    "bgStr": "#C6BAA1",
+    "bgType": 0,
     "darkStatusIcon": true,
     "textColor": "#5E432E",
-    "textSize": 22,
+    "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
     "lineSpacingMultiplier": 1.2,
@@ -32,7 +32,7 @@
     "bgType": 0,
     "darkStatusIcon": false,
     "textColor": "#FFFFFF",
-    "textSize": 22,
+    "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
     "lineSpacingMultiplier": 1.2,
@@ -46,7 +46,7 @@
     "bgType": 1,
     "darkStatusIcon": false,
     "textColor": "#adadad",
-    "textSize": 22,
+    "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
     "lineSpacingMultiplier": 1.2,
@@ -60,7 +60,7 @@
     "bgType": 0,
     "darkStatusIcon": false,
     "textColor": "#adadad",
-    "textSize": 22,
+    "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
     "lineSpacingMultiplier": 1.2,
