--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -103,6 +103,7 @@
         <activity android:name=".ui.rss.source.manage.RssSourceActivity" />
         <activity android:name=".ui.rss.source.debug.RssSourceDebugActivity" />
         <activity android:name=".ui.rss.article.RssArticlesActivity" />
+        <activity android:name=".ui.rss.favorites.RssFavoritesActivity" />
         <activity android:name=".ui.download.DownloadActivity" />
         <activity
             android:name=".receiver.SharedReceiverActivity"
