--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,6 +175,8 @@ dependencies {
     //MarkDown
     implementation 'ru.noties.markwon:core:3.0.2'
 
+    // 转换繁体
+    implementation 'com.github.houbb:opencc4j:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
