--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <!--图标1-->
         <activity
             android:name=".ui.welcome.Icon1Activity"
+            android:icon="@mipmap/ic_launcher_1"
             android:enabled="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
