--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url 'https://maven.google.com/' }
+        maven { url 'https://github.com/psiegman/mvn-repo/raw/master/releases' }
     }
 }
 
