--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android:flexbox:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     //lifecycle
     def lifecycle_version = '2.2.0'
@@ -143,13 +144,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     //规则相关
-    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'cn.wanghaomiao:JsoupXpath:2.3.2'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
 
-    //JS
-    implementation 'com.github.gedoor:rhino-android:1.3'
+    //JS rhino
+    implementation 'io.apisense:rhino-android:1.1.1'
 
     //Retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:4.1.0'
@@ -177,6 +177,7 @@ dependencies {
 
     // 转换繁体
     implementation 'com.github.houbb:opencc4j:1.4.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
