--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -10,11 +10,7 @@
     "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
+    "lineSpacingMultiplier": 1.2
   },
   {
     "bgStr": "#DDC090",
@@ -27,11 +23,7 @@
     "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
+    "lineSpacingMultiplier": 1.2
   },
   {
     "bgStr": "#C2D8AA",
@@ -44,11 +36,7 @@
     "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
+    "lineSpacingMultiplier": 1.2
   },
   {
     "bgStr": "#DBB8E2",
@@ -61,11 +49,7 @@
     "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
+    "lineSpacingMultiplier": 1.2
   },
   {
     "bgStr": "#ABCEE0",
@@ -78,10 +62,6 @@
     "textSize": 24,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
+    "lineSpacingMultiplier": 1.2
   }
 ]
