--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,9 +124,6 @@
             android:name=".ui.config.ConfigActivity"
             android:launchMode="singleTask" />
         <activity
-            android:name=".ui.replacerule.ReplaceRuleActivity"
-            android:launchMode="singleTask" />
-        <activity
             android:name="io.legado.app.ui.book.search.SearchActivity"
             android:launchMode="singleTask" />
         <activity
@@ -135,8 +132,8 @@
         <activity
             android:name=".ui.about.DonateActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.book.arrange.ArrangeBookActivity" />
-        <activity android:name=".ui.book.source.debug.BookSourceDebugActivity" />
+
+        <!--书源管理-->
         <activity android:name=".ui.book.source.manage.BookSourceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -147,10 +144,7 @@
                     android:scheme="yuedu" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.chapterlist.ChapterListActivity" />
-        <activity android:name=".ui.rss.read.ReadRssActivity" />
-        <activity android:name=".ui.importbook.ImportBookActivity" />
-        <activity android:name=".ui.explore.ExploreShowActivity" />
+        <!--订阅源管理-->
         <activity android:name=".ui.rss.source.manage.RssSourceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -163,6 +157,27 @@
                     android:scheme="yuedu" />
             </intent-filter>
         </activity>
+        <!--替换规则界面-->
+        <activity
+            android:name=".ui.replacerule.ReplaceRuleActivity"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="replace"
+                    android:scheme="yuedu" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.book.arrange.ArrangeBookActivity" />
+        <activity android:name=".ui.book.source.debug.BookSourceDebugActivity" />
+        <activity android:name=".ui.chapterlist.ChapterListActivity" />
+        <activity android:name=".ui.rss.read.ReadRssActivity" />
+        <activity android:name=".ui.importbook.ImportBookActivity" />
+        <activity android:name=".ui.explore.ExploreShowActivity" />
         <activity android:name=".ui.rss.source.debug.RssSourceDebugActivity" />
         <activity android:name=".ui.rss.article.RssArticlesActivity" />
         <activity android:name=".ui.rss.favorites.RssFavoritesActivity" />
