--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
+    ext.kotlin_version = '1.3.70'
     repositories {
         google()
         jcenter()
@@ -29,4 +29,12 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+gradle.taskGraph.whenReady {
+    tasks.each { task ->
+        if (task.name.contains("crashlyticsUploadDeobsRelease")) {
+            task.enabled = false
+        }
+    }
 }
